--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <uses-feature android:name="android.hardware.camera" />
-
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <uses-permission android:name="android.permission.CAMERA" />
    <uses-permission android:name="android.permission.INTERNET" />
-   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-      android:maxSdkVersion="32" />
+   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
    <uses-permission
       android:name="android.permission.WRITE_EXTERNAL_STORAGE"
       android:maxSdkVersion="18" />
+   <queries>
+      <intent>
+         <action android:name="android.intent.action.VIEW" />
+
+         <category android:name="android.intent.category.BROWSABLE" />
+
+         <data android:scheme="https" />
+      </intent>
+
+   </queries>
    <application
       android:allowBackup="true"
       android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,7 +32,8 @@
       tools:targetApi="31">
       <activity
          android:name=".view.welcome.WelcomeActivity"
-         android:exported="true">
+         android:exported="true"
+         android:theme="@style/Theme.TUGASSTORYAPP.NoStatusBar">
          <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -30,17 +41,23 @@
          </intent-filter>
       </activity>
       <activity
+       android:name=".view.signup.RegisterActivity"
+       android:exported="false"
+       android:screenOrientation="portrait"
+          android:theme="@style/Theme.TUGASSTORYAPP.NoStatusBar"/>
+      <activity
          android:name=".view.Detail.DetailStoryActivity"
          android:exported="false" />
       <activity
-         android:name=".view.signup.RegisterActivity"
-         android:exported="false" />
-      <activity
          android:name=".view.story.AddStoryActivity"
-         android:exported="false" />
+         android:exported="false"
+         android:label="Tambah Cerita Baru"/>
       <activity
          android:name=".view.login.LoginActivity"
-         android:exported="false"/>
+         android:exported="false"
+          android:screenOrientation="portrait"
+          android:launchMode="singleTask"
+          android:theme="@style/Theme.TUGASSTORYAPP.NoStatusBar"/>
       <activity
          android:name=".view.main.MainActivity"
          android:exported="false">
